--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">ElMoezStreet</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_maps">Map</string>
+    <!-- gps-->
+    <string name="browser">AIzaSyD6fTp4y48dFAnZk-lPCJbEF6V4zeD9N1U</string>
+    <string name="start_gps">Start GPS</string>
+
+    <!-- end gps-->
 </resources>
