--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <!-- end gps-->
 
 
+    <!-- vuforia-->
     <string name="button_start">Start</string>
     <string name="activities_list_title_string">Vuforia Samples</string>
     <string name="activities_list_empty">No activities</string>
@@ -72,4 +73,22 @@
     <string name="menu_button_green">Green</string>
 
     <string name="splash_screen_description">Vuforia Splash</string>
+
+    <!-- end vuforia-->
+
+    <!-- Sign Up Strings-->
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="create_account">Create Account</string>
+    <string name="already_member">Already a member? Login</string>
+    <!--end of Sign Up Strings-->
+    <!-- Log In Strings-->
+    <string name="user_email">Email</string>
+    <string name="user_password">Password</string>
+    <string name="login_button">Login</string>
+    <string name="create_new_account">No account yet? Create one</string>
+
+    <!--end of Log In Strings-->
 </resources>
